[DROOLS-4070] allow to define the priority of alternative services during service discovery